src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_cron_list_empty.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 387
expression: normalized
---
{
  "ok": true,
  "result": {
    "jobs": []
  }
}
