src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_exec_approvals_get.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 434
expression: normalized
---
{
  "ok": true,
  "result": {
    "exists": "<APPROVALS_EXISTS>",
    "file": {
      "mode": "<APPROVALS_MODE>",
      "rules": []
    },
    "hash": "<APPROVALS_HASH>",
    "path": "<PATH>"
  }
}
