src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_health.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 340
expression: normalized
---
{
  "ok": true,
  "result": {
    "status": "healthy",
    "ts": "<TIMESTAMP>"
  }
}
