src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_invalid_params.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 478
expression: normalized
---
{
  "error": {
    "code": "INVALID_REQUEST",
    "message": "name is required",
    "retryable": false
  },
  "ok": false
}
