src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_models_list.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 382
expression: normalized
---
{
  "ok": true,
  "result": {
    "models": [
      {
        "alias": "sonnet",
        "id": "<UUID>",
        "label": "Claude Sonnet 4",
        "model": "claude-sonnet-4-20250514",
        "provider": "anthropic"
      },
      {
        "alias": "opus",
        "id": "<UUID>",
        "label": "Claude Opus 4",
        "model": "claude-opus-4-20250514",
        "provider": "anthropic"
      }
    ]
  }
}
